# SimpleFewShot

./: .gitignore  LICENSE  README.md  Train-metaopt.ipynb  Train.ipynb  eval.sh  explain.py  pyproject.toml  requirements.txt  setup.py  train.py  trainer.py
data/: data_manager.py
methods/: DN4.py  TADAM.py  feat.py  matching_networks.py  meta_opt_heads.py  prototypical_network.py  prototypical_networks.py
notebooks/: PrototypicalNetworks.ipynb
simplefsl/: __init__.py  trainer.py  utils.py
simplefsl/data/: __init__.py  manager.py
simplefsl/datasets/: manager.py
simplefsl/models/: DSN.py  MTL.py  MetaQDA.py  NegativeMargin.py  R2D2.py  TransformerEncoder.py  __init__.py  caml.py  dn4.py  feat.py  maml.py  maml2.py  metaopt_net.py  msenet.py  proto_net.py  relation_net.py  tadam.py  tapnet.py
