[project]
name = "simplefsl"
version = "0.1.0"
description = "A Python Library for Few-Shot Learning Models"
readme = "README.md"
keywords = ["meta learning", "few shot learning", "image classification"]
authors = [
    { name = "Victor Nascimento Ribeiro", email = "victor_nascimento@usp.br" }
]
dependencies = [
    "torch==2.7.0",
    "pandas==2.2.3",
    "torchvision==0.22.0",
    "scikit-learn==1.6.1",
    "timm==1.0.15",
    "qpth==0.0.18",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
